add fragment_add_ons, baggage, meals, payment, payment method

--- a/app/src/main/res/layout/fragment_details_information.xml
+++ b/app/src/main/res/layout/fragment_details_information.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/background_app">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
@@ -396,7 +396,7 @@
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
-                        android:background="@color/grey_text" />
+                        android:background="@color/neutral_700" />
 
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -430,7 +430,7 @@
                 style="?attr/materialCardViewElevatedStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
+                android:layout_marginBottom="24dp"
                 app:cardBackgroundColor="@color/white"
                 app:cardElevation="2dp">
 
@@ -463,185 +463,6 @@
                             android:src="@drawable/arrow_forward"
                             android:tint="@color/main_color"
                             tools:ignore="UseAppTint" />
-                    </RelativeLayout>
-                </LinearLayout>
-            </com.google.android.material.card.MaterialCardView>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                android:fontFamily="@font/roboto_bold"
-                android:text="Flight Facilities"
-                android:textColor="@color/black"
-                android:textSize="16sp" />
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/card_add_baggage"
-                style="?attr/materialCardViewElevatedStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                app:cardBackgroundColor="@color/white"
-                app:cardElevation="2dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="12dp"
-                    android:orientation="vertical">
-
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical">
-
-                        <LinearLayout
-                            android:layout_marginBottom="12dp"
-                            android:id="@+id/title_baggage"
-                            android:gravity="center_vertical"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content">
-                            <ImageView
-                                android:layout_marginEnd="8dp"
-                                android:src="@drawable/add_baggage"
-                                android:layout_width="24dp"
-                                android:layout_height="24dp"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/roboto_bold"
-                                android:text="Baggage"
-                                android:textColor="@color/black"
-                                android:textSize="14sp" />
-                        </LinearLayout>
-                        <TextView
-                            android:layout_below="@+id/title_baggage"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="You can bring up to 20kg baggage per passenger.\nAre you sure this is enough?"
-                            android:textColor="@color/grey_text"
-                            android:textSize="10sp" />
-                        <ImageView
-                            android:id="@+id/btn_add_baggage"
-                            android:layout_centerVertical="true"
-                            android:layout_alignParentEnd="true"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/add_circle" />
-                    </RelativeLayout>
-                </LinearLayout>
-            </com.google.android.material.card.MaterialCardView>
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/card_add_seat"
-                style="?attr/materialCardViewElevatedStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                app:cardBackgroundColor="@color/white"
-                app:cardElevation="2dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="12dp"
-                    android:orientation="vertical">
-
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical">
-
-                        <LinearLayout
-                            android:layout_marginBottom="12dp"
-                            android:id="@+id/title_seat_number"
-                            android:gravity="center_vertical"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content">
-                            <ImageView
-                                android:layout_marginEnd="8dp"
-                                android:src="@drawable/seat_number"
-                                android:layout_width="24dp"
-                                android:layout_height="24dp"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/roboto_bold"
-                                android:text="Seat Number"
-                                android:textColor="@color/black"
-                                android:textSize="14sp" />
-                        </LinearLayout>
-                        <TextView
-                            android:layout_below="@+id/title_seat_number"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Sitting by the window is truly delightful. Don’t miss the\nopportunity to enjoy beautiful views near the window."
-                            android:textColor="@color/grey_text"
-                            android:textSize="10sp" />
-                        <ImageView
-                            android:id="@+id/btn_add_seat_number"
-                            android:layout_centerVertical="true"
-                            android:layout_alignParentEnd="true"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/add_circle" />
-                    </RelativeLayout>
-                </LinearLayout>
-            </com.google.android.material.card.MaterialCardView>
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/card_add_food"
-                style="?attr/materialCardViewElevatedStyle"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="24dp"
-                app:cardBackgroundColor="@color/white"
-                app:cardElevation="2dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="12dp"
-                    android:orientation="vertical">
-
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical">
-
-                        <LinearLayout
-                            android:layout_marginBottom="12dp"
-                            android:id="@+id/title_food"
-                            android:gravity="center_vertical"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content">
-                            <ImageView
-                                android:layout_marginEnd="8dp"
-                                android:src="@drawable/add_food"
-                                android:layout_width="24dp"
-                                android:layout_height="24dp"/>
-                            <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/roboto_bold"
-                                android:text="In-flight Meals"
-                                android:textColor="@color/black"
-                                android:textSize="14sp" />
-                        </LinearLayout>
-                        <TextView
-                            android:layout_below="@+id/title_food"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="Don’t let yourself go hungry during the flight.\nEnjoy the meals we have prepared for you."
-                            android:textColor="@color/grey_text"
-                            android:textSize="10sp" />
-                        <ImageView
-                            android:id="@+id/btn_add_food"
-                            android:layout_centerVertical="true"
-                            android:layout_alignParentEnd="true"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:src="@drawable/add_circle" />
                     </RelativeLayout>
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
