--- a/app/src/main/res/layout/fragment_one_way_trip.xml
+++ b/app/src/main/res/layout/fragment_one_way_trip.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/background_app"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".presentation.booking.OneWayTripFragment">
 
@@ -25,43 +26,23 @@
         app:layout_constraintTop_toBottomOf="@+id/include_toolbar"
         app:layout_constraintBottom_toTopOf="@+id/include_bottom_navigation">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <include
-            layout="@layout/booking_form"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <include
-            layout="@layout/promo_code_form"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-
-        <TextView
-            android:id="@+id/tv_tourist_destination_label"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="24dp"
-            android:fontFamily="@font/roboto_bold"
-            android:text="@string/tv_tourist_destination_label"
-            android:textSize="20sp" />
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_tourist_destination"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
-            android:orientation="horizontal"
-            tools:itemCount="5"
-            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/item_tourist_destination" />
-    </LinearLayout>
+            android:orientation="vertical">
+
+            <include
+                android:id="@+id/include_booking_form"
+                layout="@layout/booking_form"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <include
+                android:layout_marginHorizontal="16dp"
+                layout="@layout/promo_code_form"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
 
     </ScrollView>
 
