--- a/app/src/main/res/layout/toolbar_choose_ticket.xml
+++ b/app/src/main/res/layout/toolbar_choose_ticket.xml
@@ -25,7 +25,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="4dp"
-        android:text="@string/tv_choose_ticket_flight_route"
+        tools:text="@string/tv_choose_ticket_flight_route"
         android:textColor="@color/white"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/tv_route_description"
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="6dp"
-        android:text="@string/tv_choose_ticket_flight_route_description"
+        tools:text="@string/tv_choose_ticket_flight_route_description"
         android:textColor="@color/white"
         android:textSize="12sp"
         app:layout_constraintBottom_toBottomOf="parent"
