--- a/app/src/main/res/layout/fragment_choose_ticket_type.xml
+++ b/app/src/main/res/layout/fragment_choose_ticket_type.xml
@@ -51,6 +51,7 @@
         app:layout_constraintTop_toBottomOf="@+id/rv_pick_date" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_ticket_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         tools:listitem="@layout/item_ticket"
