--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -26,7 +26,7 @@
         android:id="@+id/homePageFragment"
         android:name="com.rajawali.app.presentation.homepage.HomePageFragment"
         android:label="fragment_home_page"
-        tools:layout="@layout/fragment_home_page" >
+        tools:layout="@layout/fragment_home_page">
         <action
             android:id="@+id/action_homePageFragment_to_airportBottomSheetDialog"
             app:destination="@id/airportBottomSheetDialog" />
@@ -37,7 +37,7 @@
     <fragment
         android:id="@+id/loginFragment"
         android:name="com.rajawali.app.presentation.ui.auth.login.LoginFragment"
-        android:label="LoginFragment" >
+        android:label="LoginFragment">
         <action
             android:id="@+id/action_loginFragment_to_registerFragment"
             app:destination="@id/registerFragment" />
@@ -52,7 +52,7 @@
     <fragment
         android:id="@+id/registerFragment"
         android:name="com.rajawali.app.presentation.ui.auth.register.RegisterFragment"
-        android:label="RegisterFragment" >
+        android:label="RegisterFragment">
         <action
             android:id="@+id/action_registerFragment_to_loginFragment"
             app:destination="@id/loginFragment" />
@@ -61,7 +61,7 @@
         android:id="@+id/airportBottomSheetDialog"
         android:name="com.rajawali.app.presentation.pickCity.AirportBottomSheetDialog"
         android:label="bottom_sheet_dialog_airport"
-        tools:layout="@layout/bottom_sheet_dialog_airport" >
+        tools:layout="@layout/bottom_sheet_dialog_airport">
         <argument
             android:name="airport"
             app:argType="com.rajawali.core.domain.enums.AirportTypeEnum" />
@@ -70,16 +70,44 @@
         android:id="@+id/oneWayTripFragment"
         android:name="com.rajawali.app.presentation.booking.OneWayTripFragment"
         android:label="fragment_one_way_trip"
-        tools:layout="@layout/fragment_one_way_trip" >
+        tools:layout="@layout/fragment_one_way_trip">
         <action
             android:id="@+id/action_oneWayTripFragment_to_airportBottomSheetDialog"
             app:destination="@id/airportBottomSheetDialog" />
         <action
             android:id="@+id/action_oneWayTripFragment_to_passengerBottomSheetDialog"
             app:destination="@id/passengerBottomSheetDialog" />
+        <action
+            android:id="@+id/action_oneWayTripFragment_to_chooseTicketFragment"
+            app:destination="@id/chooseTicketFragment" />
     </fragment>
     <dialog
         android:id="@+id/passengerBottomSheetDialog"
         android:name="com.rajawali.app.presentation.bottomSheetDialog.passenger.PassengerBottomSheetDialog"
         android:label="PassengerBottomSheetDialog" />
+    <fragment
+        android:id="@+id/chooseTicketFragment"
+        android:name="com.rajawali.app.presentation.chooseTicket.ChooseTicketFragment"
+        android:label="fragment_choose_ticket"
+        tools:layout="@layout/fragment_choose_ticket" >
+        <action
+            android:id="@+id/action_chooseTicketFragment_to_selectedTicketFragment"
+            app:destination="@id/selectedTicketFragment" />
+        <action
+            android:id="@+id/action_chooseTicketFragment_to_flightDetailBottomSheetDialog"
+            app:destination="@id/flightDetailBottomSheetDialog" />
+    </fragment>
+    <fragment
+        android:id="@+id/selectedTicketFragment"
+        android:name="com.rajawali.app.presentation.confirmBooking.SelectedTicketFragment"
+        android:label="SelectedTicketFragment" >
+    </fragment>
+    <dialog
+        android:id="@+id/flightDetailBottomSheetDialog"
+        android:name="com.rajawali.app.presentation.bottomSheetDialog.flightDetail.FlightDetailBottomSheetDialog"
+        android:label="FlightDetailBottomSheetDialog" >
+        <argument
+            android:name="ticket"
+            app:argType="com.rajawali.core.domain.model.FlightModel" />
+    </dialog>
 </navigation>
