--- a/core/src/main/res/layout/item_ticket.xml
+++ b/core/src/main/res/layout/item_ticket.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/item_ticket"
@@ -60,7 +61,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/departure_time"
+                        android:id="@+id/tv_departure_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="2dp"
@@ -113,7 +114,7 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/arrive_time"
+                        android:id="@+id/tv_arrive_time"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="2dp"
@@ -150,7 +151,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="4dp"
                         android:fontFamily="@font/roboto_medium"
-                        android:text="@string/tv_price_ticket"
+                        tools:text="@string/tv_price_ticket"
                         android:textColor="@color/main_color"
                         android:textSize="16sp" />
 
@@ -180,7 +181,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="@font/roboto_medium"
-                            android:text="@string/tv_point"
+                            tools:text="@string/tv_point"
                             android:textColor="@color/neutral_700"
                             android:textSize="10sp" />
                     </LinearLayout>
@@ -206,6 +207,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/ll_reschedule_options"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <ImageView
