ChooseTicketFragment & and Flight detail is now available

--- a/app/src/main/res/layout/bottom_sheet_dialog_airport.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog_airport.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:minHeight="700dp"
+    android:backgroundTint="@color/white"
     android:paddingHorizontal="16dp"
     android:paddingBottom="16dp"
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
@@ -57,15 +58,15 @@
             android:drawableStart="@drawable/ic_round_search"
             android:drawablePadding="8dp"
             android:ems="10"
+            android:importantForAutofill="no"
             android:inputType="text"
+            android:labelFor="@+id/et_search"
             android:paddingHorizontal="12dp"
             android:textSize="14sp"
-            android:labelFor="@+id/et_search"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_search_label"
-            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
-            android:importantForAutofill="no" />
+            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
         <TextView
             android:id="@+id/tv_recent_search"
