--- a/app/src/main/res/layout/bottom_sheet_dialog_flight_detail.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog_flight_detail.xml
@@ -12,6 +12,7 @@
         android:layout_height="match_parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingHorizontal="16dp"
@@ -66,18 +67,18 @@
                 android:id="@+id/iv_arrow_right"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="2dp"
+                android:contentDescription="@string/app_name"
                 android:src="@drawable/ic_long_arrow_right"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_departing_city"
                 app:layout_constraintStart_toEndOf="@+id/tv_departing_city"
-                app:layout_constraintTop_toTopOf="@+id/tv_departing_city"
-                android:contentDescription="@string/app_name" />
+                app:layout_constraintTop_toTopOf="@+id/tv_departing_city" />
 
             <TextView
                 android:id="@+id/tv_arriving_city"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="2dp"
                 android:fontFamily="@font/roboto_bold"
                 android:text="@string/tv_balikpapan_city"
                 app:layout_constraintStart_toEndOf="@+id/iv_arrow_right"
@@ -113,30 +114,30 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
+                android:contentDescription="@string/app_name"
                 android:src="@drawable/ic_ellipse"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_flight_date"
-                android:contentDescription="@string/app_name" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_flight_date" />
 
             <ImageView
                 android:id="@+id/iv_line"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:contentDescription="@string/app_name"
                 android:src="@drawable/ic_line"
                 app:layout_constraintEnd_toEndOf="@+id/iv_ellipse"
                 app:layout_constraintStart_toStartOf="@+id/iv_ellipse"
-                app:layout_constraintTop_toBottomOf="@+id/iv_ellipse"
-                android:contentDescription="@string/app_name" />
+                app:layout_constraintTop_toBottomOf="@+id/iv_ellipse" />
 
             <ImageView
                 android:id="@+id/iv_ellipse_filled"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:contentDescription="@string/app_name"
                 android:src="@drawable/ic_ellipse_filled"
                 app:layout_constraintEnd_toEndOf="@+id/iv_line"
                 app:layout_constraintStart_toStartOf="@+id/iv_line"
-                app:layout_constraintTop_toBottomOf="@+id/iv_line"
-                android:contentDescription="@string/app_name" />
+                app:layout_constraintTop_toBottomOf="@+id/iv_line" />
 
             <TextView
                 android:id="@+id/tv_departing__city_code_time"
@@ -144,7 +145,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:fontFamily="@font/roboto_medium"
-                android:text="@string/tv_departing__city_code_time"
+                android:text="@string/tv_city_code_time"
                 android:textColor="@color/black"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/iv_ellipse"
@@ -179,10 +180,10 @@
                     android:id="@+id/iv_rajawali_logo"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
+                    android:contentDescription="@string/app_name"
                     android:src="@drawable/png_rajawali_air_logo_transparent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:contentDescription="@string/app_name" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/tv_rajawali_name"
@@ -198,11 +199,11 @@
                     app:layout_constraintTop_toTopOf="@+id/iv_rajawali_logo" />
 
                 <TextView
-                    android:id="@+id/tv_flight_seat"
+                    android:id="@+id/tv_flight_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="2dp"
-                    android:text="@string/tv_flight_seat"
+                    android:text="@string/tv_flight_number"
                     android:textSize="10sp"
                     app:layout_constraintStart_toStartOf="@+id/tv_rajawali_name"
                     app:layout_constraintTop_toBottomOf="@+id/tv_rajawali_name" />
@@ -213,10 +214,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:background="@drawable/custom_iv_flight_included"
+                    android:contentDescription="@string/app_name"
                     android:src="@drawable/ic_luggage_outline"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/tv_flight_seat"
-                    android:contentDescription="@string/app_name" />
+                    app:layout_constraintTop_toBottomOf="@+id/tv_flight_number" />
 
                 <TextView
                     android:id="@+id/tv_luggage_description"
@@ -246,10 +247,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:background="@drawable/custom_iv_flight_included"
+                    android:contentDescription="@string/app_name"
                     android:src="@drawable/ic_fluent_food"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/iv_included_luggage"
-                    android:contentDescription="@string/app_name" />
+                    app:layout_constraintTop_toBottomOf="@+id/iv_included_luggage" />
 
                 <TextView
                     android:id="@+id/tv_meal_description"
@@ -269,10 +270,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:background="@drawable/custom_iv_flight_included"
+                    android:contentDescription="@string/app_name"
                     android:src="@drawable/ic_wifi_slash"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/iv_included_meal"
-                    android:contentDescription="@string/app_name" />
+                    app:layout_constraintTop_toBottomOf="@+id/iv_included_meal" />
 
                 <TextView
                     android:id="@+id/tv_wifi_description"
@@ -292,10 +293,10 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:background="@drawable/custom_iv_flight_included"
+                    android:contentDescription="@string/app_name"
                     android:src="@drawable/ic_battery_slash"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/iv_included_wifi"
-                    android:contentDescription="@string/app_name" />
+                    app:layout_constraintTop_toBottomOf="@+id/iv_included_wifi" />
 
                 <TextView
                     android:id="@+id/tv_usb_port_description"
@@ -317,7 +318,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:fontFamily="@font/roboto_medium"
-                android:text="@string/tv_arriving__city_code_time"
+                android:text="@string/tv_city_code_time"
                 android:textColor="@color/black"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@+id/iv_ellipse_filled"
@@ -338,25 +339,29 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/constraintLayout2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:paddingTop="8dp"
+            android:layout_marginTop="174dp"
             android:background="@drawable/custom_cl_detail_flight_total_price"
+            android:paddingTop="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout3">
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_continue"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
                 android:backgroundTint="@color/main_color"
                 android:fontFamily="@font/roboto_bold"
                 android:paddingHorizontal="35dp"
                 android:text="@string/btn_continue"
                 android:textSize="16sp"
-                android:layout_marginEnd="16dp"
                 app:cornerRadius="4dp"
+                android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_total_price"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/tv_total_price_label" />
@@ -396,7 +401,7 @@
                 android:paddingVertical="2dp"
                 android:paddingStart="16dp"
                 android:paddingEnd="0dp"
-                android:text="@string/earn_10000_loyalty_points"
+                android:text="@string/tv_point_gain"
                 android:textColor="@color/main_color"
                 android:textSize="10sp"
                 app:drawableLeftCompat="@drawable/ic_pepicons_pencil_coins_circle"
