--- a/app/src/main/res/layout/fragment_choose_ticket.xml
+++ b/app/src/main/res/layout/fragment_choose_ticket.xml
@@ -38,6 +38,20 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <TextView
+        android:id="@+id/tv_no_tickets"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:fontFamily="@font/roboto_medium"
+        android:text="@string/tv_no_tickets"
+        android:visibility="gone"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rv_pick_date" />
+
     <include
         android:id="@+id/include_chosen_departure_ticket"
         layout="@layout/item_ticket"
