choose baggage & choose meals is now available

--- a/app/src/main/res/layout/fragment_selected_ticket.xml
+++ b/app/src/main/res/layout/fragment_selected_ticket.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_app">
-
+    android:background="@color/background_app"
+    tools:context=".presentation.selectedTicket.SelectedTicketFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
@@ -264,7 +264,7 @@
                                                 android:layout_width="wrap_content"
                                                 android:layout_height="wrap_content"
                                                 android:fontFamily="@font/roboto_medium"
-                                                android:text="@string/tv_ticket_detail"
+                                                tools:text="@string/tv_ticket_detail"
                                                 android:textColor="@color/neutral_700"
                                                 android:textSize="10sp" />
 
