--- a/core/src/main/res/values/colors.xml
+++ b/core/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="quaternary_color">#1e90ff</color>
     <color name="background_color">#e3eeff</color>
     <color name="onahau">#D2F1FF</color>
+    <color name="lily_white">#E9F8FF</color>
+    <color name="alto">#E0E0E0</color>
 </resources>
