--- a/app/src/main/res/layout/fragment_baggage.xml
+++ b/app/src/main/res/layout/fragment_baggage.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_app">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/background_app"
+    tools:context=".presentation.addsOn.baggage.BaggageFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
@@ -146,239 +148,13 @@
                             android:textSize="10sp" />
                     </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
-            <TextView
-                android:id="@+id/tv_passenger"
-                android:layout_width="wrap_content"
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_passengers_baggage"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp"
-                android:fontFamily="@font/roboto_bold"
-                android:text="@string/passenger_1_adult"
-                android:textColor="@color/black"
-                android:textSize="14sp" />
-            <RelativeLayout
-                android:layout_marginBottom="12dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/btn_0_kg"
-                    style="?attr/materialCardViewElevatedStyle"
-                    android:layout_width="90dp"
-                    android:layout_height="40dp"
-                    app:cardCornerRadius="4dp"
-                    app:strokeColor="@color/neutral_400"
-                    app:strokeWidth="2dp"
-                    app:cardBackgroundColor="@color/white"
-                    app:cardElevation="8dp">
-                    <LinearLayout
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                        <TextView
-                            android:layout_marginBottom="2dp"
-                            android:id="@+id/tv_0kg"
-                            android:fontFamily="@font/roboto_medium"
-                            android:textSize="12sp"
-                            android:textColor="@color/black"
-                            android:text="@string/_0_kg"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                        <TextView
-                            android:id="@+id/tv_idr_0"
-                            android:fontFamily="@font/roboto_medium"
-                            android:textSize="10sp"
-                            android:textColor="@color/black"
-                            android:text="@string/idr_0"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
+                tools:listitem="@layout/item_baggages"/>
 
-                </com.google.android.material.card.MaterialCardView>
-                <com.google.android.material.card.MaterialCardView
-                    app:strokeColor="@color/main_color"
-                    app:strokeWidth="2dp"
-                    android:layout_centerHorizontal="true"
-                    android:id="@+id/btn_5_kg"
-                    style="?attr/materialCardViewElevatedStyle"
-                    android:layout_width="90dp"
-                    android:layout_height="40dp"
-                    app:cardCornerRadius="4dp"
-                    app:cardBackgroundColor="@color/light_blue"
-                    app:cardElevation="8dp">
-                    <LinearLayout
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                        <TextView
-                            android:layout_marginBottom="2dp"
-                            android:id="@+id/tv_5kg"
-                            android:fontFamily="@font/roboto_medium"
-                            android:textSize="12sp"
-                            android:textColor="@color/main_color"
-                            android:text="@string/_5_kg"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                        <TextView
-                            android:id="@+id/tv_idr_250_000"
-                            android:fontFamily="@font/roboto_medium"
-                            android:textSize="10sp"
-                            android:textColor="@color/main_color"
-                            android:text="@string/idr_250_000"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
-
-                </com.google.android.material.card.MaterialCardView>
-                <com.google.android.material.card.MaterialCardView
-                    android:layout_alignParentEnd="true"
-                    app:strokeColor="@color/neutral_400"
-                    app:strokeWidth="2dp"
-                    android:id="@+id/btn_10_kg"
-                    style="?attr/materialCardViewElevatedStyle"
-                    android:layout_width="90dp"
-                    android:layout_height="40dp"
-                    app:cardCornerRadius="4dp"
-                    app:cardBackgroundColor="@color/white"
-                    app:cardElevation="8dp">
-                    <LinearLayout
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                        <TextView
-                            android:layout_marginBottom="2dp"
-                            android:id="@+id/tv_10kg"
-                            android:fontFamily="@font/roboto_medium"
-                            android:textSize="12sp"
-                            android:textColor="@color/black"
-                            android:text="@string/_10_kg"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                        <TextView
-                            android:id="@+id/tv_idr_500.000"
-                            android:fontFamily="@font/roboto_medium"
-                            android:textSize="10sp"
-                            android:textColor="@color/black"
-                            android:text="@string/idr_500_000"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
-
-                </com.google.android.material.card.MaterialCardView>
-            </RelativeLayout>
-            <RelativeLayout
-                android:layout_marginBottom="16dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <com.google.android.material.card.MaterialCardView
-                    android:id="@+id/btn_20_kg"
-                    app:strokeColor="@color/neutral_400"
-                    app:strokeWidth="2dp"
-                    style="?attr/materialCardViewElevatedStyle"
-                    android:layout_width="90dp"
-                    android:layout_height="40dp"
-                    app:cardCornerRadius="4dp"
-                    app:cardBackgroundColor="@color/white"
-                    app:cardElevation="8dp">
-                    <LinearLayout
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                        <TextView
-                            android:layout_marginBottom="2dp"
-                            android:id="@+id/tv_20kg"
-                            android:fontFamily="@font/roboto_medium"
-                            android:textSize="12sp"
-                            android:textColor="@color/black"
-                            android:text="@string/_20_kg"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                        <TextView
-                            android:id="@+id/tv_idr_1.000.000"
-                            android:fontFamily="@font/roboto_medium"
-                            android:textSize="10sp"
-                            android:textColor="@color/black"
-                            android:text="@string/idr_1_000_000"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
-
-                </com.google.android.material.card.MaterialCardView>
-                <com.google.android.material.card.MaterialCardView
-                    android:layout_centerHorizontal="true"
-                    android:id="@+id/btn_30_kg"
-                    app:strokeColor="@color/neutral_400"
-                    app:strokeWidth="2dp"
-                    style="?attr/materialCardViewElevatedStyle"
-                    android:layout_width="90dp"
-                    android:layout_height="40dp"
-                    app:cardCornerRadius="4dp"
-                    app:cardBackgroundColor="@color/white"
-                    app:cardElevation="8dp">
-                    <LinearLayout
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                        <TextView
-                            android:layout_marginBottom="2dp"
-                            android:id="@+id/tv_30kg"
-                            android:fontFamily="@font/roboto_medium"
-                            android:textSize="12sp"
-                            android:textColor="@color/black"
-                            android:text="@string/_30_kg"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                        <TextView
-                            android:id="@+id/tv_idr_2.000.000"
-                            android:fontFamily="@font/roboto_medium"
-                            android:textSize="10sp"
-                            android:textColor="@color/black"
-                            android:text="@string/idr_2_000_000"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
-
-                </com.google.android.material.card.MaterialCardView>
-                <com.google.android.material.card.MaterialCardView
-                    android:layout_alignParentEnd="true"
-                    android:id="@+id/btn_40_kg"
-                    app:strokeColor="@color/neutral_400"
-                    app:strokeWidth="2dp"
-                    style="?attr/materialCardViewElevatedStyle"
-                    android:layout_width="90dp"
-                    android:layout_height="40dp"
-                    app:cardCornerRadius="4dp"
-                    app:cardBackgroundColor="@color/white"
-                    app:cardElevation="8dp">
-                    <LinearLayout
-                        android:gravity="center"
-                        android:orientation="vertical"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
-                        <TextView
-                            android:layout_marginBottom="2dp"
-                            android:id="@+id/tv_40kg"
-                            android:fontFamily="@font/roboto_medium"
-                            android:textSize="12sp"
-                            android:textColor="@color/black"
-                            android:text="40 Kg"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                        <TextView
-                            android:id="@+id/tv_40_kg_idr_2.000.000"
-                            android:fontFamily="@font/roboto_medium"
-                            android:textSize="10sp"
-                            android:textColor="@color/black"
-                            android:text="@string/idr_2_000_000"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                    </LinearLayout>
-
-                </com.google.android.material.card.MaterialCardView>
-            </RelativeLayout>
         </LinearLayout>
     </ScrollView>
 
