--- a/app/src/main/res/layout/fragment_details_information.xml
+++ b/app/src/main/res/layout/fragment_details_information.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_app">
+    android:background="@color/background_app"
+    tools:context=".presentation.detailsInformation.DetailsInformationFragment">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
@@ -153,7 +154,7 @@
                             android:id="@+id/direct_flight"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/tv_direct_flight"
+                            tools:text="@string/tv_direct_flight"
                             android:textColor="@color/neutral_700"
                             android:textSize="10sp" />
 
@@ -220,7 +221,7 @@
                     android:layout_marginVertical="16dp">
 
                     <RadioGroup
-                        android:id="@+id/radioGroup"
+                        android:id="@+id/rg_gender"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
@@ -253,7 +254,7 @@
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@id/radioGroup"
+                        android:layout_below="@id/rg_gender"
                         android:layout_marginVertical="12dp"
                         android:hint="Full Name"
                         app:boxCornerRadiusBottomEnd="4dp"
@@ -399,6 +400,7 @@
                         android:background="@color/neutral_700" />
 
                     <RelativeLayout
+                        android:id="@+id/rl_first_passenger"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="14dp"
@@ -425,47 +427,14 @@
                 </LinearLayout>
             </com.google.android.material.card.MaterialCardView>
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/card_passenger_other"
-                style="?attr/materialCardViewElevatedStyle"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_passenger_input"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                tools:listitem="@layout/item_passenger_input"
                 android:layout_marginBottom="24dp"
-                app:cardBackgroundColor="@color/white"
-                app:cardElevation="2dp">
+                />
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="12dp"
-                    android:orientation="vertical">
-
-
-                    <RelativeLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:gravity="center_vertical">
-
-                        <TextView
-                            android:id="@+id/tv_passenger_detail_other"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="@font/roboto_bold"
-                            android:text="@string/tv_passenger_detail_other"
-                            android:textColor="@color/main_color"
-                            android:textSize="14sp" />
-
-                        <ImageView
-                            android:id="@+id/btn_expand_other"
-                            android:layout_width="16dp"
-                            android:layout_height="16dp"
-                            android:layout_alignParentEnd="true"
-                            android:src="@drawable/arrow_forward"
-                            android:tint="@color/main_color"
-                            tools:ignore="UseAppTint" />
-                    </RelativeLayout>
-                </LinearLayout>
-            </com.google.android.material.card.MaterialCardView>
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/btn_next_page"
                 android:layout_width="match_parent"
