--- a/app/src/main/res/layout/fragment_meals.xml
+++ b/app/src/main/res/layout/fragment_meals.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/background_app">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/background_app"
+    tools:context="presentation.addsOn.meals.MealsFragment">
+
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
@@ -52,108 +54,44 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <HorizontalScrollView
-        android:layout_marginBottom="12dp"
         android:id="@+id/horizontal_scrollview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="12dp"
         android:scrollbars="none"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/app_bar">
-        <LinearLayout
-            android:layout_width="match_parent"
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_passenger_selection"
+            android:layout_width="wrap_content"
+            android:layout_marginVertical="16dp"
+            tools:itemCount="2"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp">
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/card_passenger_selected"
-                android:layout_marginEnd="16dp"
-                app:cardCornerRadius="8dp"
-                app:strokeColor="@color/main_color"
-                app:strokeWidth="2dp"
-                style="?attr/materialCardViewElevatedStyle"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                app:cardBackgroundColor="@color/light_blue"
-                app:cardElevation="2dp">
-                <LinearLayout
-                    android:layout_margin="10dp"
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:textColor="@color/main_color"
-                        android:id="@+id/tv_passenger"
-                        android:layout_marginBottom="4dp"
-                        android:fontFamily="@font/roboto_bold"
-                        android:textSize="12sp"
-                        android:text="@string/passenger_1_adult"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                    <TextView
-                        android:id="@+id/tv_meal_count_selected"
-                        android:textColor="@color/main_color"
-                        android:fontFamily="@font/roboto_bold"
-                        android:textSize="10sp"
-                        android:text="@string/_3_meals_idr_146_000"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                </LinearLayout>
-            </com.google.android.material.card.MaterialCardView>
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/card_passenger"
-                app:strokeWidth="2dp"
-                app:strokeColor="@color/neutral_400"
-                android:layout_marginEnd="16dp"
-                app:cardCornerRadius="8dp"
-                style="?attr/materialCardViewElevatedStyle"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                app:cardBackgroundColor="@color/white"
-                app:cardElevation="2dp">
-                <LinearLayout
-                    android:layout_margin="10dp"
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:id="@+id/tv_passenger_2"
-                        android:textColor="@color/black"
-                        android:layout_marginBottom="4dp"
-                        android:fontFamily="@font/roboto_bold"
-                        android:textSize="12sp"
-                        android:text="@string/passenger_2_adult"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                    <TextView
-                        android:id="@+id/tv_no_order"
-                        android:textColor="@color/black"
-                        android:fontFamily="@font/roboto_bold"
-                        android:textSize="10sp"
-                        android:text="@string/no_orders_yet"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"/>
-                </LinearLayout>
-            </com.google.android.material.card.MaterialCardView>
-        </LinearLayout>
+            tools:listitem="@layout/item_passenger_card"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:orientation="horizontal"/>
     </HorizontalScrollView>
+
     <com.google.android.material.card.MaterialCardView
-        app:cardCornerRadius="8dp"
-        android:layout_marginHorizontal="16dp"
         android:id="@+id/item_ticket"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/horizontal_scrollview"
         style="?attr/materialCardViewElevatedStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="16dp"
         android:layout_marginBottom="16dp"
         app:cardBackgroundColor="@color/white"
-        app:cardElevation="2dp">
+        app:cardCornerRadius="8dp"
+        app:cardElevation="2dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/horizontal_scrollview">
 
         <LinearLayout
-            android:layout_margin="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -203,19 +141,21 @@
                 android:textSize="10sp" />
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
+
     <TextView
         android:id="@+id/tv_meals"
-        android:layout_marginVertical="12dp"
-        android:layout_marginStart="16dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/item_ticket"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="12dp"
+        android:layout_marginStart="16dp"
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/roboto_bold"
         android:text="Meals"
         android:textColor="@color/black"
-        android:textSize="16sp" />
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/item_ticket" />
+
     <ScrollView
         android:id="@+id/scrollview"
         android:layout_width="match_parent"
@@ -225,27 +165,30 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tv_meals">
+
         <LinearLayout
-            android:layout_margin="16dp"
-            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:orientation="vertical">
+
             <com.google.android.material.card.MaterialCardView
-                app:cardCornerRadius="4dp"
                 android:id="@+id/meals_card"
                 style="?attr/materialCardViewElevatedStyle"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="24dp"
                 app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="4dp"
                 app:cardElevation="2dp">
+
                 <androidx.recyclerview.widget.RecyclerView
-                    tools:itemCount="10"
-                    android:layout_margin="11dp"
                     android:id="@+id/rv_meals"
-                    tools:listitem="@layout/item_meals"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
+                    android:layout_height="wrap_content"
+                    android:layout_margin="11dp"
+                    tools:itemCount="10"
+                    tools:listitem="@layout/item_meals" />
             </com.google.android.material.card.MaterialCardView>
         </LinearLayout>
     </ScrollView>
@@ -279,20 +222,20 @@
 
             <TextView
                 android:id="@+id/total_price"
-                android:layout_below="@id/total"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/total"
                 android:fontFamily="@font/roboto_bold"
-                android:text="@string/idr_146_000"
+                android:text="@string/zero"
                 android:textColor="@color/main_color"
                 android:textSize="16sp" />
 
 
             <RelativeLayout
-                android:layout_centerVertical="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true">
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true">
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/btn_save"
@@ -300,9 +243,9 @@
                     android:layout_height="32dp"
                     android:backgroundTint="@color/main_color"
                     android:fontFamily="@font/roboto_medium"
+                    android:padding="0dp"
                     android:text="Save"
                     android:textAllCaps="false"
-                    android:padding="0dp"
                     android:textSize="14sp"
                     app:cornerRadius="4dp" />
             </RelativeLayout>
