--- a/core/src/main/res/layout/item_meals.xml
+++ b/core/src/main/res/layout/item_meals.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:id="@+id/cl_meal"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <ImageView
         android:id="@+id/img_meal"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:src="@drawable/meal_1"
         android:layout_width="80dp"
         android:layout_height="60dp"/>
     <TextView
@@ -21,16 +21,19 @@
         android:text="@string/vegetarian_lasagna"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+
     <TextView
-        android:layout_marginStart="8dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_meal_name"
-        app:layout_constraintStart_toEndOf="@id/img_meal"
         android:id="@+id/tv_meal_description"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/vegetarian_lasagna_with_tomato_sauce_nand_parsley"
         android:textColor="@color/neutral_700"
         android:textSize="10sp"
-        android:text="@string/vegetarian_lasagna_with_tomato_sauce_nand_parsley"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        app:layout_constraintEnd_toStartOf="@+id/cb_meal"
+        app:layout_constraintStart_toEndOf="@id/img_meal"
+        app:layout_constraintTop_toBottomOf="@id/tv_meal_name" />
     <TextView
         android:layout_marginTop="4dp"
         android:layout_marginStart="8dp"
@@ -54,6 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
     <CheckBox
+        android:id="@+id/cb_meal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/img_meal"
         app:layout_constraintTop_toTopOf="@id/img_meal"
@@ -66,5 +70,5 @@
         app:layout_constraintTop_toBottomOf="@id/img_meal"
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/neutral_400" />
+        android:background="@color/alto" />
 </androidx.constraintlayout.widget.ConstraintLayout>
