--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -131,7 +131,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="8dp"
                             android:fontFamily="@font/roboto_medium"
-                            android:text="@string/tv_yogyakarta_airport_code"
+                            android:text="@string/tv_choose"
                             android:maxLines="1"
                             android:maxEms="6"
                             android:textColor="@color/white"
@@ -146,7 +146,7 @@
                             android:layout_marginTop="8dp"
                             android:maxEms="8"
                             android:maxLines="2"
-                            android:text="@string/tv_departure_city_name_label"
+                            tools:text="@string/tv_departure_city_name_label"
                             android:textSize="12sp"
                             android:textColor="@color/white"
                             app:layout_constraintStart_toStartOf="parent"
@@ -205,7 +205,7 @@
                             android:textAlignment="textEnd"
                             android:maxLines="1"
                             android:maxEms="6"
-                            android:text="@string/tv_balikpapan_airport_code"
+                            android:text="@string/tv_choose"
                             android:textColor="@color/white"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -218,7 +218,7 @@
                             android:layout_marginTop="8dp"
                             android:maxEms="8"
                             android:maxLines="2"
-                            android:text="@string/tv_arrive_city_name_label"
+                            tools:text="@string/tv_arrive_city_name_label"
                             android:textAlignment="textEnd"
                             android:textColor="@color/white"
                             android:textSize="12sp"
